[package]
authors = ["Jakob Lachermeier"]
description = "A pure rust implementation for the BME680 environmental sensor"
license = "MIT"
name = "bosch-bme680"
categories = ["embedded", "no-std"]
keywords = ["driver", "bme680", "sensor", "no_std"]
repository = "https://github.com/JakobLachermeier/bosch-bme680"
readme = "README.md"
version = "1.0.0"
edition = "2021"


[dependencies]
embedded-hal = "1.0.0"
log = "0.4"
bitfield = "0.14"

[dev-dependencies]
embedded-hal-mock = "0.10"
test-log = "0.2"
env_logger = "0.11"
