[package]
authors = ["Jakob Lachermeier"]
description = "A pure rust implementation for the BME680 environmental sensor"
license = "MIT"
name = "bosch-bme680"
categories = ["embedded", "no-std"]
keywords = ["driver", "bme680", "sensor", "no_std"]
repository = "https://github.com/JakobLachermeier/bosch-bme680"
readme = "README.md"
version = "1.0.3"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
log = "0.4"
bitfield = "0.16"

[dev-dependencies]
embedded-hal-mock = "0.11"
test-log = "0.2"
env_logger = "0.11"
approx = "0.5.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
